--- a/front/src/assets/styles/main.css
+++ b/front/src/assets/styles/main.css
@@ -4,10 +4,10 @@
 @font-face {
   font-family: 'Material Symbols Outlined';
   font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v134/kJF1BvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oDMzByHX9rA6RzazHD_dY43zj-jCxv3fzvRNU22ZXGJpEpjC_1v-p_4MrImHCIJIZrDCvHeej.woff2) format('woff2');
+  font-weight: 100 700;
+  src: url('/fonts/material-symbols.woff2') format('woff2');
+  /* src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v136/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2) format('woff2'); */
 }
-
 
 .material-symbols-outlined {
   font-family: 'Material Symbols Outlined';
@@ -21,13 +21,16 @@
   white-space: nowrap;
   word-wrap: normal;
   direction: ltr;
-  font-variation-settings: 'FILL' 1, 'GRAD' 0, 'wght' 400, 'opsz' 24;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
 
-.custom-font {
-  font-variation-settings: 'FILL' 0, 'GRAD' 0, 'wght' 400, 'opsz' 24 !important;
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 250,
+    'GRAD' 0,
+    'opsz' 24
 }
 
 @font-face {
