--- a/back/ne_sop_backend/ne_sop_api/templates/email_update_item_fr-ch.html
+++ b/back/ne_sop_backend/ne_sop_api/templates/email_update_item_fr-ch.html
@@ -4,6 +4,11 @@
 <p>
         Pour consulter l'objet en question, suivez le lien suivant: <a href="{{ front_url }}/items/{{ item_id }}">{{ front_url }}/items/{{ item_id }}</a>
 </p>
+<br>
+<p>
+        Service principal: {{ main_service }}<br>
+        Service(s) en appui: {{ support_services }}
+</p>
 
 {% endblock %}
 {% block footer %}
