--- a/back/ne_sop_backend/ne_sop_api/templates/email_create_item_fr-ch.html
+++ b/back/ne_sop_backend/ne_sop_api/templates/email_create_item_fr-ch.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h2>L'objet parlementaire "<em>{{ item_name }}</em>" a été créé.</h2>
 <p>
-        Pour consulter l'objet en question, suivez le lien suivant: <a href="{{ front_url }}/items/{{ item_id }}">{{ front_url }}/items/{{ item_id }}</a>
+        Pour consulter l'objet en question, suivez le lien suivant: <a href="{{ front_url }}/#/items/{{ item_id }}">{{ front_url }}/#/items/{{ item_id }}</a>
 </p>
 <br>
 <p>
