--- a/front/src/assets/styles/main.css
+++ b/front/src/assets/styles/main.css
@@ -254,3 +254,20 @@ body:after {
   margin: 0 auto;
   font-weight: normal;
 }
+
+.blink {
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
